# some_bot

./: .env.example  .gitignore  AGENTS.md  Custom_Glyphs.db  README.md  bot.py  cookies.txt  last_version.json  pyproject.toml  requirements.txt  start.sh
cogs/: UR_version_loop.py  ai-stuff.py  bot-dm.py  generic.py  google_ai.py  minecraft-stuff.py  owo.py  pplx-ai.py  rss-feed.py  user_management.py  youtube_notifications.py  ytdlp-stuff.py
cogs/google_ai_sys_prompts/: gemini_2_0_flash.md  gemini_2_0_flash_lite.md  gemini_2_0_flash_thinking_exp_01_21.md  gemini_2_0_flash_websearch.md  gemini_2_5_flash_preview_04_17.md  gemini_2_5_flash_preview_04_17_websearch.md  gemini_2_5_pro_exp_03_25.md
filebin_client/: __init__.py
filebin_client/api/bin_/: delete_bin.py  get_archive_bin_tar.py  get_archive_bin_zip.py  get_bin.py  get_qr_bin.py  put_bin.py
filebin_client/api/file/: delete_bin_filename.py  get_bin_filename.py  post.py  post_bin_filename.py
subclasses/: __init__.py  filebin.py  glyph_db.py  glyph_tools.py
utils/: UR_Version_check.py  youtube_helpers.py
utils/minecwaft/: __init__.py  minecraft.py  minecraft_rcon.py
utils/minecwaft/commands/: __init__.py  base.py  block.py  entity.py  game.py  inventory.py  mods.py  player.py  server.py  world.py
