[project]
name = "some-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.4",
    "beautifulsoup4>=4.14.3",
    "feedparser>=6.0.12",
    "google-api-python-client>=2.193.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "google-genai>=1.70.0",
    "httpx>=0.28.1",
    "mcrcon>=0.7.0",
    "mcstatus>=13.0.1",
    "openai>=2.30.0",
    "purrbot-site-api-wrapper",
    "py-cord>=2.7.0rc2",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.0",
    "selenium>=4.41.0",
    "spotipy>=2.26.0",
    "tiktoken>=0.12.0",
    "validators>=0.35.0",
    "webdriver-manager>=4.0.2",
    "yt-dlp>=2026.3.17",
    "zipp>=3.19.1",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.uv]
package = false

[tool.uv.sources]
purrbot-site-api-wrapper = { path = "../purrbot_site_api_wrapper", editable = true }
